apps/base/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger-worker
  labels:
    app: ledger-worker
    app.kubernetes.io/name: ledger-worker
    app.kubernetes.io/part-of: my-ledger
spec:
  replicas: 2 # base default; override in overlays (prod/staging)
  selector:
    matchLabels:
      app: ledger-worker
  template:
    metadata:
      labels:
        app: ledger-worker
        app.kubernetes.io/name: ledger-worker
        app.kubernetes.io/part-of: my-ledger
    spec:
      containers:
        - name: ledger-worker
          image: sm7rth/my-ledger-worker:554d70a77fd835a66430451e87e699b14c8df5ed
          ports:
            - containerPort: 3002
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            tcpSocket:
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: 3002
            initialDelaySeconds: 5
            periodSeconds: 10
